--- a/style.css
+++ b/style.css
@@ -1,8 +1,88 @@
-.tabela {
+body {
+    background-color:slategray;
+}
+table.steelBlueCols {
     margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    border: 4px solid #555555;
+    background-color: #555555;
+    width: 400px;
+    text-align: center;
+    border-collapse: collapse;
 }
+
+    table.steelBlueCols td, table.steelBlueCols th {
+        border: 1px solid #555555;
+        padding: 5px 10px;
+    }
+
+    table.steelBlueCols tbody td {
+        font-size: 12px;
+        font-weight: bold;
+        color: #FFFFFF;
+    }
+
+    table.steelBlueCols td:nth-child(even) {
+        background: #398AA4;
+    }
+
+    table.steelBlueCols thead {
+        background: #398AA4;
+        border-bottom: 10px solid #398AA4;
+    }
+
+        table.steelBlueCols thead th {
+            font-size: 15px;
+            font-weight: bold;
+            color: #FFFFFF;
+            text-align: left;
+            border-left: 2px solid #398AA4;
+        }
+
+            table.steelBlueCols thead th:first-child {
+                border-left: none;
+            }
+
+    table.steelBlueCols tfoot td {
+        font-size: 13px;
+    }
+
+    table.steelBlueCols tfoot .links {
+        text-align: right;
+    }
+
+        table.steelBlueCols tfoot .links a {
+            display: inline-block;
+            background: #FFFFFF;
+            color: #398AA4;
+            padding: 2px 8px;
+            border-radius: 5px;
+        }
+.button {
+    box-shadow: inset 0px 1px 3px 0px #91b8b3;
+    background: linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
+    background-color: #768d87;
+    border-radius: 5px;
+    border: 1px solid #566963;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 11px 23px;
+    text-decoration: none;
+    text-shadow: 0px -1px 0px #2b665e;
+}
+    .button:hover {
+        background: linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
+        background-color: #6c7c7c;
+    }
+    .button:active {
+        position: relative;
+        top: 1px;
+    }
