--- a/style.css
+++ b/style.css
@@ -92,3 +92,10 @@ table.steelBlueCols {
 #wartosci {
     background-color: blue;
 }
+#tabWykonali {
+    right: 20;
+    bottom: 20;
+    position: absolute;
+    border: 3px solid black;
+    background-color:white;
+}
